Update license to LGPL V3

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"keywords": ["grammar", "spelling", "spanish"],
 	"author": "Angel Cardenas",
-	"license": "GPL-3.0-only",
+	"license": "LGPL-3.0-only",
 	"devDependencies": {
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
